@startuml "Class diagram"

page 2x2
skinparam pageMargin 10

package "FoocleBusiness" {
    class FoocleBusiness {
      - cvr: String
      - name: String
      - businessEmail: String
      - businessPhone: Phone
      - address: Location
      - description: String
      - foocleSpots: List<FoocleSpot>
      - reviews: List<Review>
      - accounts: List<FoocleBusinessAccount>
      - createdAt: LocalDateTime
      - updatedAt: LocalDateTime
    }
    class BusinessAccount {
      - account: Account
      - FoocleBusinessId: String
      - isAdmin: boolean
    }
    class FoocleSpot {
      - id: long
      - contractPerson: BusinessAccount
      - menues: List<SpotMenu>
      - location: Location
      - businessId: String
      - createdAt: LocalDateTime
      - updatedAt: LocalDateTime
    }
    package "SpotMenu" {
        class SpotMenu {
          - id: long
          - description: String
          - pictures: List<String>
          - foodPrefences: Set<FoodPrefence>
          - createdAt: LocalDateTime
          - updatedAt: LocalDateTime
          - pickupTimeFrom: LocalDateTime
          - pickupTimeTo: LocalDateTime
        }
        enum FoodPrefence {
              VEGAN
              VEGETARIAN
              PESCETAR
              FLEXITAR
              POLLOTAR
        }
    }
}

package "FoocleScout" {
    class FoocleScout {
          - account: Account
          - reviews: List<Review>
    }
    package "ScoutRequest" {
        class ScoutRequest {
          - id: long
          - scoutId: long
          - menuId: long
          - status: ScoutRequestStatus
          - optionalMsg: String
        }
        enum ScoutRequestStatus {
          PENDING
          DENIED
          ACCEPTED
          CANCELED
        }
    }
    class RequestHistory {
      - requests: LinkedList<ScoutRequest>
    }
}



package "Account" {
    class Account {
      - firstname: String
      - lastname: String
      - email: String
      - phone: Phone
      - description: String
      - password: String
      - notifications: NotificationHistory
      - createdAt: LocalDateTime
      - updatedAt: LocalDateTime
    }
    class Phone {
      - number: String
      - areaCode: String
    }
    class Notification {
      - id: long
      - requestId: long
      - msg: String
      - createdAt: LocalDateTime
    }
    class NotificationHistory {
      - id: long
      - notifications: List<Notifaction>
    }
}

class Location {
  - address: String
  - city: String
  - zipCode: String
  - country: String
}

class Review {
  - id: long
  - requestId: long
  - locacation: Location
  - businessId: String
  - rating: float
  - description: String
}



'-------------------------------------


Phone *- Account

FoocleBusiness *- BusinessAccount
BusinessAccount *-- FoocleSpot
FoocleBusiness *-- FoocleSpot
FoocleSpot *-- SpotMenu
SpotMenu -* FoodPrefence

FoocleScout -* RequestHistory
RequestHistory *-d- ScoutRequest
ScoutRequestStatus *- ScoutRequest

SpotMenu *-- ScoutRequest

BusinessAccount --* Account
FoocleScout --* Account


Account -u-* Location
FoocleBusiness --* Location
FoocleSpot --* Location

Location *-- Review
FoocleBusiness *-- Review
FoocleScout *-u- Review

Notification *-- ScoutRequest
NotificationHistory *-l- Notification
Account *-- NotificationHistory

@enduml
@enduml